Update code samples